# pgwire-replication

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
benches/: protocol_bench.rs
examples/: basic.rs  bounded_replay.rs  checkpointed.rs  common.rs  control_and_stream.rs  with_mtls.rs  with_tls.rs
examples/support/: common.rs
src/: config.rs  error.rs  lib.rs  lsn.rs
src/auth/: mod.rs  scram.rs
src/client/: mod.rs  tokio_client.rs  worker.rs
src/protocol/: framing.rs  messages.rs  mod.rs  replication.rs
src/tls/: mod.rs  rustls.rs
tests/: integration_postgres.rs
tests/fixtures/: test_cert.pem  test_key.pem
